# cobalt-entity

./: Cargo.toml  README.md
examples/: client.rs  server.rs
examples/shared/: mod.rs
src/: lib.rs
src/client/: entity.rs  mod.rs
src/server/: entity.rs  mod.rs
src/shared/: entity_handle.rs  mod.rs
src/traits/: entity.rs  entity_registry.rs  entity_serializer.rs  mod.rs
tests/: lib.rs  mock.rs
